// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ChatScreen with existing messages 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={false}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <RCTScrollView
    contentContainerStyle={
      [
        {
          "paddingBottom": 12,
        },
        {
          "paddingBottom": NaN,
        },
      ]
    }
    data={
      [
        {
          "content": "Hello there",
          "role": "user",
        },
        {
          "content": "Hi! How can I help you?",
          "role": "assistant",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="handled"
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={[]}
    style={
      {
        "flex": 1,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "flex-end",
              "alignSelf": "flex-end",
              "marginVertical": 12,
              "maxWidth": "90%",
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 16,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                },
                {
                  "backgroundColor": "#ebebeb",
                },
              ]
            }
          >
            <Text
              style={
                {
                  "fontSize": 15,
                  "lineHeight": 22,
                }
              }
            >
              Hello there
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            {
              "marginTop": 12,
              "marginVertical": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "flexDirection": "row",
                "marginTop": 12,
              }
            }
          >
            <View
              accessibilityLabel="components.messageListItem.copy"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={8}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  false,
                ]
              }
            >
              <PlatformIcon
                androidIconName="content_copy"
                color="#7c7c7c"
                iosIconName="doc.on.doc"
                size={14}
              />
              <Text
                style={
                  [
                    {
                      "includeFontPadding": false,
                      "lineHeight": 16,
                      "marginLeft": 4,
                    },
                    {
                      "color": "#7c7c7c",
                    },
                  ]
                }
                variant="caption"
              >
                components.messageListItem.copy
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <InputBar
    attachExpanded={false}
    hasAudio={false}
    isStreaming={false}
    onAttachAudio={[Function]}
    onAttachCamera={[Function]}
    onAttachExpandedChange={[Function]}
    onAttachImage={[Function]}
    onChangeText={[Function]}
    onSend={[Function]}
    onStop={[Function]}
    showAudioAttach={false}
    showImageAttach={false}
    style={
      {
        "paddingBottom": NaN,
      }
    }
    value=""
  />
</View>
`;

exports[`renders correctly empty ChatScreen 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "paddingHorizontal": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={false}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <InputBar
    attachExpanded={false}
    hasAudio={false}
    isStreaming={false}
    onAttachAudio={[Function]}
    onAttachCamera={[Function]}
    onAttachExpandedChange={[Function]}
    onAttachImage={[Function]}
    onChangeText={[Function]}
    onSend={[Function]}
    onStop={[Function]}
    showAudioAttach={false}
    showImageAttach={false}
    style={
      {
        "paddingBottom": NaN,
      }
    }
    value=""
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "columnGap": 8,
          "paddingHorizontal": 12,
        }
      }
      horizontal={true}
      keyboardShouldPersistTaps="handled"
      showsHorizontalScrollIndicator={false}
      style={
        {
          "marginBottom": 8,
        }
      }
    >
      <View>
        <View
          accessibilityLabel="components.messageStarters.planParisTrip.title components.messageStarters.planParisTrip.subtitle"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "borderRadius": 16,
                "paddingHorizontal": 16,
                "paddingVertical": 12,
              },
              {
                "backgroundColor": "#ebebeb",
              },
              false,
            ]
          }
        >
          <Text
            bold={true}
            numberOfLines={1}
            variant="body2"
          >
            components.messageStarters.planParisTrip.title
          </Text>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#7c7c7c",
              }
            }
            variant="body2"
          >
            components.messageStarters.planParisTrip.subtitle
          </Text>
        </View>
        <View
          accessibilityLabel="components.messageStarters.summarizeText.title components.messageStarters.summarizeText.subtitle"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "borderRadius": 16,
                "paddingHorizontal": 16,
                "paddingVertical": 12,
              },
              {
                "backgroundColor": "#ebebeb",
              },
              false,
            ]
          }
        >
          <Text
            bold={true}
            numberOfLines={1}
            variant="body2"
          >
            components.messageStarters.summarizeText.title
          </Text>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#7c7c7c",
              }
            }
            variant="body2"
          >
            components.messageStarters.summarizeText.subtitle
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </InputBar>
</View>
`;
